improved Integer object creation